--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: ruby
 rvm:
   - 2.3.0
 before_install: gem install bundler -v 1.11.2
+env:
+  - CODECLIMATE_REPO_TOKEN=11b65803df2f0f42022c4ec362cdb7d74a15cb7cc994b841903dcf9b719bf4c1
