refactors function lists to come from payload value or function

--- a/spec/support/sb_config.yml
+++ b/spec/support/sb_config.yml
@@ -5,7 +5,8 @@
         :value: 4500
       :function:
         :type: sum
-        :list: sales
+        :list:
+          :value: sales
         :property: amount
   - :function:
       :type: member
