updates example to new syntax
adds script to make viewing example results easier.

--- a/examples/example1/sb_config.yml
+++ b/examples/example1/sb_config.yml
@@ -19,7 +19,8 @@
       :property: summary.sales_by_product
       :function:
         :type: group
-        :list: sales
+        :list:
+          :value: sales
         :by: product
         :operator: +
         :operand: amount
