filters the example list for sales in KS and IA

--- a/examples/example1/sb_config.yml
+++ b/examples/example1/sb_config.yml
@@ -20,7 +20,17 @@
       :function:
         :type: group
         :list:
-          :value: sales
+          :function:
+            :type: list_filter
+            :list: sales
+            :filters:
+              - :function:
+                  :type: member
+                  :properties:
+                    - customer_state
+                  :facts:
+                    - IA
+                    - KS
         :by: product
         :operator: +
         :operand: amount
