does not force polling for guard.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ app: &base
   command: "rake test"
 guard:
   <<: *base
-  command: "nohup guard start --force-polling --no-interactions"
+  command: "nohup guard start --no-interactions"
   ports: []
 bundle_data:
   image: tianon/true
